--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,1 +1,40 @@
-<h1>Hello word</h1>
+<div class="col-md-6 offset-md-3">
+    <div class="card">
+        <div class="card-header">
+            <h1>Tasks</h1>
+        </div>
+        <div class="card-body">
+           
+        </div>
+        <div class="card-footer">
+            <div class="form">
+                <form action="">
+                    <div class="form-group">
+                        <input type="text" name="firstname" placeholder="Firstname"
+                         class="form-control" autofocus>
+                    </div>
+
+                     <div class="form-group">
+                        <input type="text" name="lastname" placeholder="Lastname"
+                         class="form-control" >
+                    </div>
+
+                     <div class="form-group">
+                        <input type="text" name="email" placeholder="Email"
+                         class="form-control" >
+                    </div>
+
+                     <div class="form-group">
+                        <input type="text" name="phone" placeholder="Phone"
+                         class="form-control" >
+                    </div>
+
+                    <button class="btn btn-primary btn-block">
+                        Add
+                    </button>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
