Connect to firebase

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="card-footer">
             <div class="form">
-                <form action="">
+                <form action="/new-contact" method="POST">
                     <div class="form-group">
                         <input type="text" name="firstname" placeholder="Firstname"
                          class="form-control" autofocus>
