--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -4,7 +4,26 @@
             <h1>Tasks</h1>
         </div>
         <div class="card-body">
-           
+           {{#if contacts}}
+               
+                <ul class="list-group d-flex justify-content-between align-items-center">
+                   {{#each contacts}}
+                     <li class="list-group-item">
+                        {{firstname}}
+                        {{lastname}}
+                        {{email}}
+                        {{phone}}
+                        <a href="/delete-contact/{{@key}}" class="btn btn-danger">
+                            Delete
+                        </a>
+                     </li>
+                    {{/each}}
+                </ul>
+              
+           <h1>contacts</h1>
+           {{else}}
+           <p>No contacts</p>
+           {{/if}}
         </div>
         <div class="card-footer">
             <div class="form">
